[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "patato"
version = "0.3.0"
dependencies = [
    "requests",
    "cython",
    "shapely",
    "pylops",
    "h5py",
    "typing_extensions",
    "seaborn",
    "pandas",
    "scikit-learn",
    "xarray",
    "numpy",
    "scipy",
    "tabulate",
    "matplotlib",
    "matplotlib_scalebar",
    "dask",
    "pybind11",
    "jax[cpu]; platform_system!='Windows'",
    "wget",
    "gdown"
]

authors = [
  { name="Thomas Else", email="thomas.else@cruk.cam.ac.uk" },
]
description = "A Python Toolkit for the analysis of photoacoustic tomography data."
readme = "README.md"
requires-python = ">=3.8,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bohndieklab/patato"
"Bug Tracker" = "https://github.com/bohndieklab/patato/issues"
"Documentation" = "https://patato.readthedocs.io"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["patato", "patato.*"]  # ["*"] by default
exclude = []  # empty by default
namespaces = true  # true by default

[project.scripts]
patato-import-ithera = "patato.convenience_scripts.convert_binary_to_hdf5:main"
patato-draw-roi = "patato.convenience_scripts.draw_roi:main"
patato-set-speed-of-sound = "patato.convenience_scripts.tune_speed_of_sound:main"
patato-unmix = "patato.convenience_scripts.unmix:main"
patato-reconstruct = "patato.convenience_scripts.process_msot:main"
patato-analyse-dce = "patato.convenience_scripts.data_analysis.analyse_dce:main"
patato-analyse-gc = "patato.convenience_scripts.data_analysis.analyse_gas_challenge:main"
patato-convert-simpa = "patato.convenience_scripts.convert_simpa:main"

[tool.setuptools.package-data]
"patato.unmixing.spectra.spectra_files" = ["*.csv", "*.txt"]
"patato.recon.recon_presets" = ["*.json"]
"patato.unmixing.unmix_presets" = ["*.json"]
"*" = ["*.cu", "*.cl"]

[tool.setuptools.exclude-package-data]
"*" = [".gitattributes", ".gitignore"]
