[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "patato"
dynamic = ["version"]
dependencies = [
    "requests",
    "cython",
    "shapely",
    "pylops == 2.1", # Check version compatibility with pylops
    "h5py",
    "typing_extensions",
    "pandas",
    "scikit-learn",
    "xarray",
    "numpy>=1.22",
    "scipy",
    "tabulate",
    "matplotlib",
    "matplotlib_scalebar",
    "dask",
    "pybind11",
    "jax[cpu]",
    # Need to verify that jax works on ARM platforms.
    "wget",
    "gdown",
    "customtkinter"
]

authors = [
  { name="Thomas Else", email="thomas.else@cruk.cam.ac.uk" },
]
description = "A Python Toolkit for the analysis of photoacoustic tomography data."
readme = "README.md"
requires-python = ">=3.8,<3.12"

keywords = [
    "photoacoustics",
    "jax",
    "tomography",
    "reconstruction",
    "spectral unmixing",
    "dynamic contrast enhanced",
    "backprojection",
    "model based"
]

license = { file = "LICENSE.MD", name = "LGPL-3.0" }

classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bohndieklab/patato"
"Bug Tracker" = "https://github.com/bohndieklab/patato/issues"
"Documentation" = "https://patato.readthedocs.io"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["patato", "patato.*"]  # ["*"] by default
exclude = []  # empty by default
namespaces = true  # true by default

[project.scripts]
patato-import-ithera = "patato.convenience_scripts.convert_binary_to_hdf5:main"
patato-set-speed-of-sound = "patato.convenience_scripts.tune_speed_of_sound:main"
patato-unmix = "patato.convenience_scripts.unmix:main"
patato-reconstruct = "patato.convenience_scripts.process_msot:main"
patato-analyse-dce = "patato.convenience_scripts.data_analysis.analyse_dce:main"
patato-analyse-gc = "patato.convenience_scripts.data_analysis.analyse_gas_challenge:main"
patato-convert-simpa = "patato.convenience_scripts.convert_simpa:main"

[project.gui-scripts]
patato-draw-roi = "patato.convenience_scripts.draw_roi:main"

[tool.setuptools.package-data]
"*" = ["*.cu", "*.cl", "*.json", "*.csv", "*.txt", "*.png"]

[tool.setuptools.exclude-package-data]
"*" = [".gitattributes", ".gitignore"]

[tool.setuptools_scm]
write_to = "patato/_version.py"
